--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -592,10 +592,10 @@ pre {
   -ms-flex-order: -1;
   order: -1; }
 
-.order-last {
+/* .order-last {
   -webkit-box-ordinal-group: 14;
   -ms-flex-order: 13;
-  order: 13; }
+  order: 13; } */
 
 .order-0 {
   -webkit-box-ordinal-group: 1;
@@ -1094,7 +1094,7 @@ pre {
   .order-lg-last {
     -webkit-box-ordinal-group: 14;
     -ms-flex-order: 13;
-    order: 13; }
+    /* order: 13; } */
   .order-lg-0 {
     -webkit-box-ordinal-group: 1;
     -ms-flex-order: 0;
@@ -8327,7 +8327,7 @@ h1, h2, h3, h4, h5,
   border-radius: 40px; }
   @media (min-width: 992px) {
     .searchform {
-      width: 300px; } }
+      } }
   .searchform .form-control {
     width: calc(100% - 50px);
     border: none;
