--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -9009,5 +9009,19 @@ h1, h2, h3, h4, h5,
   text-decoration: line-through;
   cursor: not-allowed;
 }
+/* loader style */
+#preloader {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  background-image: rgba(0,0,0,0.75) url("frontend\images\gifloader.gif") no-repeat center center;
+  z-index: 99999;
+}
+
+
 
 
